[package]
name = "lx"
version = "0.1.0"
authors = ["Jacob McCollum <jacob.r.mccollum@gmail.com>"]
edition = "2018"

# [lib]
# name = "lxlib"
# path = "src/lib.rs"

[[bin]]
name = "lx"
path = "src/main.rs"

[dependencies]
quick-error = "1.2.3"
regex = "1.3.9"
itertools = "0.9.0"
serde = {version="1.0.114", features=['rc', 'derive']}
bincode = "1.3.1"
pathdiff = "0.2.0"

[dev-dependencies]
insta = {version="0.16.0", features=['glob']}
